Implementazione API Admin creazione utenti massiva + API ricerca utenti